Update the project name.

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Rio-R2RML-Parser</name>
+	<name>JR2RmlParser</name>
 	<comment></comment>
 	<projects>
 	</projects>
