--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,21 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-# Directories #
-/bin
-/lib
+# Maven
+target/
+
+# Eclipse
+.classpath
+.project
+.settings/
+META-INF/
+
+# IntelliJ
+*.iws
+*.ipr
+.idea
+*.iml
+build/
+
+# MacOS
+.DS_Store
